<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nps.NpsPayDialogFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="270dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nps_pay_question"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nps_pay_comment"
            android:textAlignment="center"
            android:textColor="@color/black_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/shape_nps_pay_button"
            android:text="@string/nps_pay_yes"
            android:textColor="@color/submit_pop_up"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:button="@null"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/shape_nps_pay_button"
            android:text="@string/nps_pay_middle"
            android:textColor="@color/submit_pop_up"
            android:textSize="16sp"
            android:textStyle="bold"
            android:stateListAnimator="@null"
            android:textAlignment="center"
            android:button="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_yes" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/shape_nps_pay_button"
            android:text="@string/nps_pay_no"
            android:textColor="@color/submit_pop_up"
            android:textSize="16sp"
            android:textStyle="bold"
            android:stateListAnimator="@null"
            android:textAlignment="center"
            android:button="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_middle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/submit_pop_up"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:text="@string/nps_submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_no" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>