<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tv_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="39dp"
        android:text="@string/main_introduction"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="18dp"
        android:paddingStart="23dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingEnd="17dp"
        android:background="@drawable/select_box_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_introduction">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title_1"
        android:textSize="26sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@+id/box_1"
        app:layout_constraintStart_toStartOf="@+id/box_1"/>
        <ImageButton
            android:id="@+id/button_1"
            android:src="@drawable/icon_right_blue"
            android:paddingTop="4dp"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="4dp"
            android:background="@drawable/shape_right_blue"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="@+id/box_1"
            app:layout_constraintTop_toTopOf="@+id/box_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title_1_introduction_1"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/box_1"
        app:layout_constraintBottom_toTopOf="@+id/title_1_introduction_2"/>
    <TextView
        android:id="@+id/title_1_introduction_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title_1_introduction_2"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/box_1"
        app:layout_constraintBottom_toBottomOf="@+id/box_1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="2dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:paddingStart="23dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingEnd="17dp"
        android:background="@drawable/select_box_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title_2"
            android:textSize="26sp"
            android:textColor="@color/black_light"
            app:layout_constraintTop_toTopOf="@+id/box_2"
            app:layout_constraintStart_toStartOf="@+id/box_2"/>
        <ImageButton
            android:id="@+id/button_2"
            android:src="@drawable/icon_right_black"
            android:paddingTop="4dp"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="4dp"
            android:background="@drawable/shape_right_black"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="@+id/box_2"
            app:layout_constraintTop_toTopOf="@+id/box_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title_2_introduction_1"
            android:textSize="18sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/box_2"
            app:layout_constraintBottom_toTopOf="@+id/title_2_introduction_2"/>
        <TextView
            android:id="@+id/title_2_introduction_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title_2_introduction_2"
            android:textSize="18sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/box_2"
            app:layout_constraintBottom_toBottomOf="@+id/box_2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>