<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round10"
    tools:context=".ui.nps.NpsDialogFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="270dp"
        android:layout_height="380dp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/nps_question"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nps_no_recommend"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nps_button_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="18dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:stateListAnimator="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_1"
                app:layout_constraintStart_toEndOf="@+id/button_1" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_2"
                app:layout_constraintStart_toEndOf="@+id/button_2" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_3"
                app:layout_constraintStart_toEndOf="@+id/button_3" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="4"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:stateListAnimator="@null"
                app:layout_constraintStart_toStartOf="@+id/button_1"
                app:layout_constraintTop_toBottomOf="@+id/button_1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_5"
                app:layout_constraintStart_toEndOf="@+id/button_5" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_7"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="6"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_6"
                app:layout_constraintStart_toEndOf="@+id/button_6" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_8"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="7"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_7"
                app:layout_constraintStart_toEndOf="@+id/button_7" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_9"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="8"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="31dp"
                android:stateListAnimator="@null"
                app:layout_constraintTop_toBottomOf="@+id/button_5"
                app:layout_constraintStart_toStartOf="parent" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_10"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="9"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_9"
                app:layout_constraintStart_toEndOf="@+id/button_9" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_11"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/shape_button_nps_circle"
                android:text="10"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="14dp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/button_10"
                app:layout_constraintStart_toEndOf="@+id/button_10" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nps_yes_recommend"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/nps_button_list"
            app:layout_constraintTop_toBottomOf="@+id/nps_button_list" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="bottom"
            android:text="@string/nps_submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:stateListAnimator="@null"
            android:background="@color/main_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>